# self-attention-pytorch

./: .gitignore  README.md  algebra.ipynb  algebra.py  decoder-only.py  github.sh  main.py  masked-self.py  multi-head.py  numpy.ipynb  probability.ipynb  pytorch.ipynb  pytorch2.py  requirements.txt  self.py
00-micrograd/: README.md  micrograd.ipynb
01-attention-basics-implementation/: self.py
01-attention-deeplearningdotai-course/: decoder-only.py  requirements.txt
01-attention-dlai/: README.md
02-tf-from-scratch-kaggle-guide/: _0_tokenization.py  _10_dataloader.py  _12_interpretability.py  _3_positional_encoding_exercise.py  _7_encoder_assembling.py
02-transformers-from-scratch/: README.md  _10_training.py  _11_inference.py  _2_embedding.py  _3_positional_encoding.py  _4_attention.py  _4_attention_viz_exercise.ipynb  _4_projection_exercise.py  _6_pos_wise_ffn.py  _7_encoder_assembling.py  _8_classifier_head.py  _9_transformer.py  tests.README.md
03-other-resources/: README.md  _3_positional_encoding.py  _4_attention_viz.ipynb  encoder.py
03-practice/: Other.md  _0_shared.py  _1_exercise.py  _2_exercise.py  _3_exercise.py  _4_exercise.py  _5_exercise.py  _6_exercise.py  _7_exercise.py
03-practice/_2_data/: train.csv
03-tf-from-scratch-kaggle-guide/: README.md  _10_training.py  _11_inference.py  _1_config.py  _1_tokenization.py  _2_embedding.py  _3_positional_encoding.py  _3_positional_encoding_exercise.py  _4_attention.py  _4_attention_viz.ipynb  _5_residual.py  _6_pos_wise_ffn.py  _7_encoder_assembling.py  _8_classifier_head.py  _9_transformer.py  tests.README.md
04-cs224n/03/: assignment_b.py  model_embeddings.py  nmt_model.py  utils.py
04-cs224n/04/: rope.pretrain.test.predictions  vanilla.nopretrain.test.predictions
04-cs224n/fp/: config.py  evaluation.py  gpt2_pretrain.py
04-cs234/: README.md
04-cs234/01/: exploring_word_vectors.ipynb
04-practice/: _0_shared.py  _1_different_dataset.py  _1_exercise.py  _2_exercise.py  _5_exercise.py  _6_exercise.py
05-cs336/02/: .gitignore  nsys.sh  pyproject.toml  requirements.txt
05-cs336/02/cs336-basics/cs336_basics/: model.py
05-cs336/02/cs336_systems/: __init__.py  main.py
05-cs336/02/src/: debug_triton.py  distributed.py  flash_torch.py  flash_triton.py  main.py  triton_tutorial.py  weighted_sum.py
05-cs336/02/src/distributed/: basics.py  ddp.py  ddp_1.py  ddp_2.py  ddp_3.py  zero1.py
05-cs336/02/src/examples/: triton_docs_fused_attention.py
05-cs336/02/src/flash_triton/: benchmark.py  flash.py  shared.py  triton_backward.py  triton_backward_2.py  triton_forward.py
05-cs336/02/src/learn_triton/: 1d_basics.py  2d.py  3_simple_matmul.py  4_matmul.py  5_softmax.py  6_softmax_nd.py  7_weighted_sum.py  8_weighted_sum_grad.py
05-cs336/02/tests/: adapters.py  test_ddp_individual_parameters.py
05-cs336/03/: .gitignore  pyproject.toml
05-cs336/03/.configs/: config_1e+13.json  config_1e+14.json  config_1e+15.json  config_1e+16.json  config_5e+13.json  config_5e+14.json  config_5e+15.json
05-cs336/03/cs336_scaling/: c_optimal.py  main.py  train.py  visualize.py
05-cs336/03/data/: api_isoflops_curves.json  wandb_scaling_data.json  wandb_scaling_data_p1_exhaustive.json
05-cs336/03/src/: __init__.py  api.py  configs.py  tokenizer.py  train.py
05-cs336/03/src/scaling_laws/: estimate.py  process_api_results.py  process_wandb_results.py  retrieve_data.py  visualize.py
(+205 files in other folders)
