[project]
name = "src"
version = "1.0.4"
description = "CS336 Assignment 2 - Systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "torch>=2.9.0.dev20250803",
    "torchaudio>=2.8.0.dev20250803",
    "torchvision>=0.24.0.dev20250803",
    "triton@git+https://github.com/triton-lang/triton",
]

[tool.setuptools.packages.find]
include = ["src", "tests"]


[[tool.uv.index]]
name = "torch-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
cs336-basics = { path = "./cs336-basics", editable = true }  # Change this path to your assignment1-basics repo you want to use your own implementation!


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]
